Changed STOP to END, set default values to 0-like values

--- a/app/src/main/res/layout/content_intentional_walk.xml
+++ b/app/src/main/res/layout/content_intentional_walk.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
         android:layout_marginTop="23dp"
-        android:text="00:25:36"
+        android:text="00:00:00"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/text_time_title"
         app:layout_constraintTop_toBottomOf="@+id/text_current_stats_title"></TextView>
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
         android:layout_marginTop="23dp"
-        android:text="13.81 mi"
+        android:text="0 mi"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/text_distance_title"
         app:layout_constraintTop_toBottomOf="@+id/text_steps_value"></TextView>
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
-        android:text="5000"
+        android:text="0"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="@+id/text_distance_title"
         app:layout_constraintStart_toEndOf="@+id/text_distance_title"
@@ -126,7 +126,7 @@
         android:layout_marginStart="61dp"
         android:layout_marginTop="152dp"
         android:layout_marginEnd="61dp"
-        android:text="STOP"
+        android:text="END"
         android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
