--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -18,13 +18,13 @@
         app:layout_constraintTop_toBottomOf="@+id/incline_text" />
 
     <Spinner
-        android:id="@+id/spinner3"
+        android:id="@+id/terrain_spinner"
         android:layout_width="205dp"
         android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/terrain_text"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/incline_spinner" />
 
     <EditText
         android:id="@+id/start_text"
@@ -228,7 +228,7 @@
         app:layout_constraintTop_toBottomOf="@+id/path_textView" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/incline_spinner"
         android:layout_width="205dp"
         android:layout_height="30dp"
         android:layout_marginStart="8dp"
@@ -248,13 +248,13 @@
         app:layout_constraintTop_toBottomOf="@+id/terrain_text" />
 
     <Spinner
-        android:id="@+id/spinner4"
+        android:id="@+id/texture_spinner"
         android:layout_width="206dp"
         android:layout_height="29dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/texture_textView"
-        app:layout_constraintTop_toBottomOf="@+id/spinner3" />
+        app:layout_constraintTop_toBottomOf="@+id/terrain_spinner" />
 
     <LinearLayout
         android:layout_width="match_parent"
