Fixed margins for fill in

--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -139,7 +139,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Additional Information"
-            android:textSize="18sp">
+            android:textSize="18sp"
+            android:paddingLeft="5dp">
 
         </TextView>
 
