Remove hardcoded strings

--- a/app/src/main/res/layout/content_start_page.xml
+++ b/app/src/main/res/layout/content_start_page.xml
@@ -33,7 +33,7 @@
         android:id="@+id/enter_height_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please enter your height:"
+        android:text="@string/enter_height"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/feet_spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="feet"
+        android:text="@string/feet_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/inch_spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:text="inches"
+        android:text="@string/inch_text"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/inch_spinner"
@@ -70,7 +70,7 @@
         android:id="@+id/enter_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ENTER"
+        android:text="@string/enter_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
