--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/title_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Route Title:"
+                android:text="@string/route_title"
                 android:textSize="18sp" />
 
             <EditText
@@ -41,7 +41,7 @@
             <TextView
                 android:id="@+id/start_textview"
                 android:layout_width="157dp"
-                android:text="Starting Location:"
+                android:text="@string/starting_location"
                 android:textSize="18sp" />
 
             <EditText
@@ -57,7 +57,7 @@
             <TextView
                 android:id="@+id/stop_textView"
                 android:layout_width="wrap_content"
-                android:text="Stop Location:"
+                android:text="@string/stop_location"
                 android:textSize="18sp"/>
 
             <EditText
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:text="Total Time:"
+            android:text="@string/total_time"
             android:textSize="18sp" />
 
         <TextView
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:text="00:00:00"
+            android:text="@string/default_time"
             android:textSize="18sp" />
 
         <TextView
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:text="Total Distance:"
+            android:text="@string/total_distance"
             android:textSize="18sp" />
 
         <TextView
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:text="00.00"
+            android:text="@string/default_dist"
             android:textSize="18sp" />
 
         <TextView
@@ -120,7 +120,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:text="mi."
+            android:text="@string/dist_unit"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -138,7 +138,7 @@
             android:id="@+id/add_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Additional Information"
+            android:text="@string/additional_info"
             android:textSize="18sp"
             android:paddingLeft="5dp">
 
@@ -161,7 +161,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Path:"
+            android:text="@string/path_text"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.033"
@@ -196,7 +196,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Incline:"
+            android:text="@string/incline_text"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/path_textView" />
@@ -227,7 +227,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Terrain:"
+            android:text="@string/terrain_text"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/incline_text" />
@@ -260,7 +260,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Texture:"
+            android:text="@string/texture_text"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/terrain_text" />
@@ -289,7 +289,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="EASY"
+            android:text="@string/easy_mode"
             android:textSize="15sp" />
 
         <Button
@@ -298,7 +298,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="MODERATE"
+            android:text="@string/mod_mode"
             android:textSize="15sp" />
 
         <Button
@@ -307,7 +307,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="HARD"
+            android:text="@string/hard_mode"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -327,7 +327,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Favorite?"
+        android:text="@string/fav_text"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
@@ -349,7 +349,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Cancel"
+            android:text="@string/cancel_text"
             android:textSize="15sp" />
 
         <Button
@@ -358,7 +358,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Save"
+            android:text="@string/save_text"
             android:textSize="15sp" />
     </LinearLayout>
 
