--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,8 +22,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/steps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/miles_word"
-        />
+        app:layout_constraintTop_toTopOf="@+id/miles_word" />
 
     <TextView
         android:id="@+id/today"
@@ -44,18 +43,18 @@
     <TextView
         android:id="@+id/steps_take"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="0dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="310dp"
         android:text="@string/totalStepsTaken"
         android:textAlignment="center"
         android:textSize="27dp"
-        app:layout_constraintBottom_toBottomOf="@+id/home_text"
+        app:layout_constraintBottom_toTopOf="@+id/btn_to_routes_screen"
         app:layout_constraintEnd_toStartOf="@+id/num_steps"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/today" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/miles_word"
@@ -195,12 +194,23 @@
         android:id="@+id/btn_debug_increment_steps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="24dp"
         android:text="Take 100 Steps"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/btn_start_walk"
         app:layout_constraintTop_toBottomOf="@+id/btn_start_walk" />
+
+    <Button
+        android:id="@+id/btn_to_routes_screen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="113dp"
+        android:text="Routes Screen"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/btn_debug_increment_steps"
+        app:layout_constraintTop_toBottomOf="@+id/steps_take" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
