--- a/app/src/main/res/layout/activity_route_details_page.xml
+++ b/app/src/main/res/layout/activity_route_details_page.xml
@@ -17,21 +17,18 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="278dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:paddingStart="5sp"
             android:paddingEnd="15dp"
-            android:text="Route Title hello my name is wolrd nad im lonely"
-            android:textAlignment="textEnd"
-            android:textSize="28sp"
+            android:scrollHorizontally="true"
+            android:text="Route Title"
+            android:textAlignment="center"
+            android:textSize="32sp"
             android:textStyle="bold" />
 
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:button="@drawable/favorite" />
     </LinearLayout>
 
     <TableLayout
@@ -57,7 +54,16 @@
                 android:layout_marginBottom="5dp"
                 android:alpha="2"
                 android:tint="@android:color/darker_gray"
-                app:srcCompat="@drawable/unnamed" />
+                app:srcCompat="@drawable/start" />
+
+            <TextView
+                android:id="@+id/start_textview"
+                android:layout_width="354dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Starting Point"
+                android:textSize="18sp" />
 
         </TableRow>
 
@@ -76,62 +82,124 @@
                 android:tint="@android:color/darker_gray"
                 app:srcCompat="@drawable/finish" />
 
+            <TextView
+                android:id="@+id/end_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Ending Point"
+                android:textSize="18sp" />
+
         </TableRow>
 
     </TableLayout>
 
     <LinearLayout
-        android:id="@+id/metrics"
+        android:id="@+id/metrics_layout"
+        android:layout_width="413dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout">
+
+        <LinearLayout
+            android:id="@+id/time_,layout"
+            android:layout_width="210dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/totalTime_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:text="@string/total_time"
+                android:textAlignment="center"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/totalTime_textEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:text="@string/default_time"
+                android:textAlignment="center"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/distance layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/totalDist_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:text="@string/total_distance"
+                android:textAlignment="center"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/mini_dist_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/dist_textEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginEnd="0dp"
+                    android:paddingLeft="6dp"
+                    android:paddingRight="6dp"
+                    android:text="@string/default_dist"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/metrics_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="6dp"
+                    android:paddingRight="6dp"
+                    android:text="@string/dist_unit"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/add_info_static_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-        tools:layout_editor_absoluteX="0dp">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/metrics_layout">
 
         <TextView
-            android:id="@+id/totalTime_textView"
+            android:id="@+id/add_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:text="@string/total_time"
-            android:textSize="18sp" />
+            android:layout_marginStart="10dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/additional_info"
+            android:textSize="20sp"
+            android:textStyle="bold">
 
-        <TextView
-            android:id="@+id/totalTime_textEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:text="@string/default_time"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/totalDist_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:text="@string/total_distance"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/dist_textEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:text="@string/default_dist"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/metrics_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:text="@string/dist_unit"
-            android:textSize="18sp" />
+        </TextView>
 
     </LinearLayout>
 
