--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -170,7 +170,8 @@
             android:id="@+id/path_textView"
             android:layout_width="61dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:text="@string/path_text"
             android:textSize="18sp"
@@ -205,7 +206,8 @@
             android:id="@+id/incline_text"
             android:layout_width="61dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:text="@string/incline_text"
             android:textSize="18sp"
@@ -236,7 +238,8 @@
             android:id="@+id/terrain_text"
             android:layout_width="61dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:text="@string/terrain_text"
             android:textSize="18sp"
@@ -269,7 +272,8 @@
             android:id="@+id/texture_textView"
             android:layout_width="61dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:text="@string/texture_text"
             android:textSize="18sp"
